--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,19 @@
 [GRID]
-CPU = 4
-RAM = 4
-GRoute = #T B3LYP cc-pVQZ EmpiricalDispersion=GD3BJ counterpoise=2
 EstimateGrid = False
+EstimateGridHemisphere = False
 Resolution = 1.0, 1.0, 1.0
+Rotation = 0.0, 0.0, 0.0
 MinDist = 3.0
-MaxDist = 6.0
+MaxDist = 5.0
+AdditionalDisplacement = 0.0, 0.0, 0.0
+TurnOffBackUp = False 
+
+[GAUSSIAN]
+CPU = 8
+RAM = 8
+MaxDisk = 5
+GRoute = #T B3LYP cc-pVTZ EmpiricalDispersion=GD3BJ Counterpoise=2
+Version = g16
 
 [READ]
 Method = 1
@@ -16,9 +24,19 @@ DThr = 1
 [PLOT]
 ColorMap = viridis
 PltStyle = points
-PltSize = 10
-MolAlpha = 1
+PltGlyph = cube
+PltSize = 1
+PltEMax = 0
 PltAlpha = 0.25
-LineWidth = 2.0
+PltShowNan = False
+PltContours = 8
+LineWidth = 1.0
 Grescale = False
+ColorWhite = False
 RealSize = True
+MolAlpha = 1
+MolSize = 2
+Resolution = 20.0
+FlipZ = False
+VMax = None
+VMin = None
